fix: Spacing fixes (#533)
* fix: add bottom margin to heros and ability to remove it with --no-margin modifier class

* fix: removed uq-sections component

* fix: uq-section component now handles spacing

* docs: removed unused .html file

--- a/packages/sections/src/scss/_custom-properties.scss
+++ b/packages/sections/src/scss/_custom-properties.scss
@@ -2,11 +2,19 @@
 
 :root {
   --section-font-size-xxxl: #{core.$font-size-xxxl};
+  --section-gap: 6rem;
+  --section-padding: #{core.$space-xl};
 }
 
-// Resize custom properties for tablet/mobile.
 @media #{core.$screen-md-down} {
   :root {
     --section-font-size-xxxl: #{core.$font-size-xxl};
+  }
+}
+
+@media #{core.$screen-lg-down} {
+  :root {
+    --section-gap: #{core.$space-uul};
+    --section-padding: #{core.$space-l};
   }
 }
